created footer with form and stylized submit button

--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,24 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="row bg-light p-5">
+    <div class="col-12">
+        <h2>Contact</h2>
+    </div>
+    <div class="col-12">
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English</p>
+    </div>
+
+    <div class="col-2"></div>
+    <div class="col-8 p-5 bg-dark-subtle">
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Your Message:</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <input type="submit" name="" id="" class="bg-primary text-light p-3 d-flex justify-content-end border border-0">
+        </div>
+    </div>
+    <div class="col-2"></div>
+</div>
+
