--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="row">
+    <div class="row bg-light p-5">
         <div class="col-lg-12">
             <p>Copyright &copy; Your Website Name 2026</p>
         </div>
