adding services code

--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,22 @@
 <!-- your html code here -->
+
+<div class="container">
+
+<div class="row">
+    <div class="col-4">
+      <img src="/website/assets/img/2.jpg" class="img-fluid rounded-circle" width="300" height="200 alt="" srcset="">
+    </div>
+    <div class="col-8 text-center">
+      <h2>
+        <span class="text-dark">The Second Heading</span>
+        <span class="text-secondary">Is Pretty Cool Too.</span>
+    </h2>
+      <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+    </div>
+  </div>
+
+
+
+</div>
 <p>Hello, I'm the services.html</p>
 <p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
