--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,36 +1,49 @@
-<div class="row">
-    <div class="col-6 mx-auto">  </div>
-</div>
-<div class="row mx-auto>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-            <div class="card h-100">
-            <img src="https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
+<div class="row mx-auto">
+    <div class="col-2"></div>
+    <div class="col-7 my-2 mb-5 mx-auto border-top border-secondary">
+        <div class="row mt-5">
+            <div class="container-fluid">
+                <h1>Portfolio</h1><p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Present commodo cursus
+            magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
             </div>
         </div>
-        <div class="col">
-            <div class="card h-100">
-            <img src="https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a short card.</p>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100 border border-0 bg-transparent">
+                <img src="https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg" class="card-img-top" alt="...">
+                <div class="card-body bg-transparent px-0">
+                    <h5 class="card-title fw-bold">Project Name</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing el
+                    am viverra euismod odio, gravida pellentesque urn
+                    varus vilde</p>
+                </div>
+                </div>
             </div>
+            <div class="col">
+                <div class="card h-100 border border-0 bg-transparent">
+                <img src="https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg" class="card-img-top" alt="...">
+                <div class="card-body bg-transparent px-0">
+                    <h5 class="card-title fw-bold">Project Name</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing el
+                    am viverra euismod odio, gravida pellentesque urn
+                    varus vilde</p>
+                </div>
+                </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-            <img src="https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
+            <div class="col">
+                <div class="card h-100 border border-0 bg-transparent">
+                <img src="https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg" class="card-img-top" alt="...">
+                <div class="card-body bg-transparent px-0">
+                    <h5 class="card-title fw-bold">Project Name</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing el
+                    am viverra euismod odio, gravida pellentesque urn
+                    varus vilde</p>
+                </div>
+                </div>
             </div>
         </div>
     </div>
+    <div class="col-2"></div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
