--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -10,7 +10,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card h-100 border border-0 bg-transparent">
-                <img src="https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg" class="card-img-top" alt="...">
+                <img src="https://anthim.com/assets/images/general/700x400.gif" class="card-img-top" alt="...">
                 <div class="card-body bg-transparent px-0">
                     <h5 class="card-title fw-bold">Project Name</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing el
@@ -21,7 +21,7 @@
             </div>
             <div class="col">
                 <div class="card h-100 border border-0 bg-transparent">
-                <img src="https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg" class="card-img-top" alt="...">
+                <img src="https://anthim.com/assets/images/general/700x400.gif" class="card-img-top" alt="...">
                 <div class="card-body bg-transparent px-0">
                     <h5 class="card-title fw-bold">Project Name</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing el
@@ -32,7 +32,7 @@
             </div>
             <div class="col">
                 <div class="card h-100 border border-0 bg-transparent">
-                <img src="https://www.atlasandboots.com/wp-content/uploads/2019/05/ama-dablam2-most-beautiful-mountains-in-the-world.jpg" class="card-img-top" alt="...">
+                <img src="https://anthim.com/assets/images/general/700x400.gif" class="card-img-top" alt="...">
                 <div class="card-body bg-transparent px-0">
                     <h5 class="card-title fw-bold">Project Name</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing el
