--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,4 +1,4 @@
-<div class="row bg-light mx-auto">
+<div class="row bg-light mx-auto w-100">
     <div class="col-2"></div>
     <div class="col-7 my-2 mb-5 mx-auto border-top border-secondary">
         <div class="row mt-5">
