--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,29 +1,16 @@
 <!-- your html code here -->
-<div class="container py-5">
-  <div class="row align-items-center">
-    
-    <!-- Texto -->
-    <div class="col-md-7">
-      <h1 class="fw-bold">
-        This First Heading
-        <span class="fw-light text-muted">Will Catch Your Eye</span>
-      </h1>
-      <p class="text-muted mt-3">
-        Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula
-        porta felis euismod semper. Praesent commodo cursus magna, vel
-        scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
-      </p>
-    </div>
+<div class="container bg-light mx-auto my-3 w-100 border-top-secondary">
 
-    <!-- Imagen -->
-    <div class="col-md-5 text-center">
-      <img
-        src="avatar.png"
-        alt="Illustration"
-        class="img-fluid rounded-circle"
-        style="max-width: 260px;"
-      >
+<div class="row my-5">
+    <div class="col-8 text-center">
+        <h2>
+            <span class="text-dark">The Second Heading</span>
+            <span class="text-secondary">Is Pretty Cool Too.</span>
+        </h2>
+      <p class="text-start">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
     </div>
-
+    <div class="col-4 p-0">
+      <img src="/website/assets/img/1.jpg" class="img-fluid rounded-circle" width="300" height="200 alt="" srcset="">
+    </div>
   </div>
 </div>
