last first-heading

--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,13 +1,14 @@
 <!-- your html code here -->
 <div class="container bg-light mx-auto my-3 w-100 border-top-secondary">
 
-<div class="row my-5">
-    <div class="col-8 text-center">
+<div class="row py-5 my-1 border-top border-secondary">
+    <div class="col-8 text-start pt-3">
         <h2>
-            <span class="text-dark">The Second Heading</span>
-            <span class="text-secondary">Is Pretty Cool Too.</span>
+            <span class="text-dark">The First Heading</span>
+            <span class="text-secondary">Will Catch Your Eye</span>
         </h2>
-      <p class="text-start">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+      <p class="text-start">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Present commodo cursus magna, vel scelerisque nist
+consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
     <div class="col-4 p-0">
       <img src="/website/assets/img/1.jpg" class="img-fluid rounded-circle" width="300" height="200 alt="" srcset="">
