--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -2,7 +2,7 @@
 
 <div class="container my-3">
 
-<div class="row my-5">
+<div class="row py-5 my-1 border-top border-secondary">
     <div class="col-4 p-0">
       <img src="/website/assets/img/2.jpg" class="img-fluid rounded-circle" width="300" height="200 alt="" srcset="">
     </div>
