--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,3 +1,10 @@
 body{
     background: #BDBDBD;
 }
+.jumbotron{
+    background-image: url("/website/assets/img/bg.jpg");
+    background-size: cover;
+    background-position: center;
+    color: white;
+    min-height: 1200px;
+}
