--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,9 +1,8 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<div class="p-5 mb-4 bg-light rounded-3">
-  <img src="../website/assets/bg.jpg" class="img-fluid" alt="responsive image">
-  <div class="container-fluid py-5">
-    <h1 class="display-5 fw-bold bg-light">Custom jumbotron</h1>
-    <p class="col-md-8 fs-4 bg-light">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap.</p>
+<div class="jumbotron p-5 mb-4 bg-light rounded-3 h-100">
+  <div class="container-fluid position-absolute top-50 start-50 translate-middle text-secondary">
+    <h1 class="display-5 fw-bold bg-light text-center">ONE PAGE WONDER</h1>
+    <h2 class="display-5 fw-bold bg-light text-center">Will Knock Your Socks</h2>
   </div>
 </div>
