--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background: #BDBDBD;
+    background: whitesmoke;
 }
 .jumbotron{
     background-image: url("/website/assets/img/bg.jpg");
